...
    navController: NavController,
    viewModel : MainViewModel = viewModel()
){


    val cardMap = mapOf(
        drawable.charizard to "#1. Charizard",
        drawable.jolteon to "#2. Jolteon",
        drawable.lucario to "#3. Lucario",
        drawable.m1 to "4# Carta magic"
    )

    // Lista de pantallas de la barra inferior
...
            horizontalAlignment = Alignment.CenterHorizontally,
                verticalArrangement = Arrangement.Top
            ) {
                Text(
                    modifier = Modifier
                        .padding(0.dp, 35.dp, 0.dp, 0.dp),
                    text = "¡Top cartas seleccionadas!",
                    style = MaterialTheme.typography.titleMedium,
                            color = MaterialTheme.colorScheme.onPrimary
                )

                Spacer(
                    modifier = Modifier.height(35.dp)
...
